[package]
name    = "limit-rust-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
cetacea-proto = { git = "https://github.com/Limit-LAB/cetacea-proto.git" }
orkas-core    = { git = "https://github.com/Limit-LAB/orkas.git" }
limlog        = { git = "https://github.com/Limit-LAB/limlog.git" }
r18           = { git = "https://github.com/Limit-LAB/r18.git" }
jsonmpk       = { git = "https://github.com/Limit-LAB/jsonmpk.git" }

## Workaround for ambigious pkgid spec in tree
[patch.'https://github.com/Limit-LAB/limlog']
limlog = { git = "https://github.com/Limit-LAB//limlog" }
